--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <meta name="viewport" content="width=device-width, minimum-scale=0.1">
 </head>
 <body style="margin: 0px; background: #0e0e0e; height: 100%">
-<img style="-webkit-user-select: none;margin: auto;width:100%;height:100%;" src="http://localhost:8080/test.jpg">
+<img style="-webkit-user-select: none;margin: auto;width:100%;height:100%;" src="/test.jpg">
 </body>
 </html>
